--- a/squid.conf
+++ b/squid.conf
@@ -1,4 +1,4 @@
-#	WELCOME TO SQUID 3.5.15
+#	WELCOME TO SQUID 3.5.28
 #	----------------------------
 #	
 #	This is the documentation for the Squid configuration file.
@@ -506,7 +506,7 @@
 #
 #	  children-max=n
 #			Maximum number of acl helper processes spawned to service
-#			external acl lookups of this type. (default 20)
+#			external acl lookups of this type. (default 5)
 #
 #	  children-startup=n
 #			Minimum number of acl helper processes to spawn during
@@ -718,18 +718,27 @@
 #	acl aclname dst [-n] ip-address/mask ...	# URL host's IP address [slow]
 #	acl aclname localip ip-address/mask ... # IP address the client connected to [fast]
 #
-#	acl aclname arp      mac-address ... (xx:xx:xx:xx:xx:xx notation)
+#if USE_SQUID_EUI
+#	acl aclname arp      mac-address ...
+#	acl aclname eui64    eui64-address ...
 #	  # [fast]
+#	  # MAC (EUI-48) and EUI-64 addresses use xx:xx:xx:xx:xx:xx notation.
+#	  #
 #	  # The 'arp' ACL code is not portable to all operating systems.
 #	  # It works on Linux, Solaris, Windows, FreeBSD, and some other
 #	  # BSD variants.
 #	  #
-#	  # NOTE: Squid can only determine the MAC/EUI address for IPv4
+#	  # The eui_lookup directive is required to be 'on' (the default)
+#	  # and Squid built with --enable-eui for MAC/EUI addresses to be
+#	  # available for this ACL.
+#	  #
+#	  # Squid can only determine the MAC/EUI address for IPv4
 #	  # clients that are on the same subnet. If the client is on a
 #	  # different subnet, then Squid cannot find out its address.
 #	  #
-#	  # NOTE 2: IPv6 protocol does not contain ARP. MAC/EUI is either
+#	  # IPv6 protocol does not contain ARP. MAC/EUI is either
 #	  # encoded directly in the IPv6 address or not available.
+#endif
 #
 #	acl aclname srcdomain   .foo.com ...
 #	  # reverse lookup, from client IP [slow]
@@ -756,6 +765,7 @@
 #	  # cache_peer_access mycache_mydomain.net deny all
 #
 #	acl aclname peername myPeer ...
+#	acl aclname peername_regex [-i] regex-pattern ...
 #	  # [fast]
 #	  # match against a named cache_peer entry
 #	  # set unique name= on cache_peer lines for reliable use.
@@ -980,6 +990,9 @@
 #	  # During each Ssl-Bump step, Squid may improve its understanding of a
 #	  # "true server name". Unlike dstdomain, this ACL does not perform
 #	  # DNS lookups.
+#	  # The "none" name can be used to match transactions where Squid
+#	  # could not compute the server name using any information source
+#	  # already available at the ACL evaluation time.
 #
 #	acl aclname ssl::server_name_regex [-i] \.foo\.com ...
 #	  # regex matches server name obtained from various sources [fast]
@@ -1020,7 +1033,6 @@
 #
 # Recommended minimum configuration:
 #
-
 
 # Example rule allowing access from your local networks.
 # Adapt to list your (internal) IP networks from where browsing
@@ -1239,8 +1251,6 @@ http_access deny to_localhost
 #
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
-
-# http_access allow localhost
 
 # Example rule allowing access from your local networks.
 # Adapt localnet in the ACL section to list your (internal) IP networks
@@ -1525,13 +1535,12 @@ icp_access deny all
 #			certificate equals lifetime of the CA certificate. If
 #			generated certificate is selfsigned lifetime is three 
 #			years.
-#			This option is enabled by default when ssl-bump is used.
-#			See the ssl-bump option above for more information.
+#			This option is disabled by default. See the ssl-bump
+#			option above for more information.
 #			
 #	   dynamic_cert_mem_cache_size=SIZE
 #			Approximate total RAM size spent on cached generated
-#			certificates. If set to zero, caching is disabled. The
-#			default value is 4MB.
+#			certificates. If set to zero, caching is disabled.
 #
 #	TLS / SSL Options:
 #
@@ -1794,13 +1803,12 @@ http_port 127.0.0.1:3128
 #			certificate equals lifetime of CA certificate. If
 #			generated certificate is selfsigned lifetime is three
 #			years.
-#			This option is enabled by default when SslBump is used.
-#			See the sslBump option above for more information.
+#			This option is disabled by default. See the ssl-bump
+#			option above for more information.
 #
 #	   dynamic_cert_mem_cache_size=SIZE
 #			Approximate total RAM size spent on cached generated
-#			certificates. If set to zero, caching is disabled. The
-#			default value is 4MB.
+#			certificates. If set to zero, caching is disabled.
 #
 #	See http_port for a list of available options.
 #Default:
@@ -1921,6 +1929,8 @@ http_port 127.0.0.1:3128
 #	been redefined for use by ECN (RFC 3168 section 23.1).
 #	The squid parser will enforce this by masking away the ECN bits.
 #
+#	This clause only supports fast acl types.
+#	See http://wiki.squid-cache.org/SquidFaq/SquidAcl for details.
 #Default:
 # none
 
@@ -1964,6 +1974,9 @@ http_port 127.0.0.1:3128
 #
 #	Note: This feature is incompatible with qos_flows. Any mark values set here
 #	will be overwritten by mark values in qos_flows.
+#
+#	This clause only supports fast acl types.
+#	See http://wiki.squid-cache.org/SquidFaq/SquidAcl for details.
 #Default:
 # none
 
@@ -2078,6 +2091,8 @@ http_port 127.0.0.1:3128
 #	When needing to contact peers use the no-tproxy cache_peer option and the
 #	client_dst_passthru directive re-enable normal forwarding such as this.
 #
+#	This clause only supports fast acl types.
+#	See http://wiki.squid-cache.org/SquidFaq/SquidAcl for details.
 #Default:
 # Address selection is performed by the operating system.
 
@@ -2216,13 +2231,16 @@ http_port 127.0.0.1:3128
 #	    NO_TLSv1    Disallow the use of TLSv1.0
 #	    NO_TLSv1_1  Disallow the use of TLSv1.1
 #	    NO_TLSv1_2  Disallow the use of TLSv1.2
+#
 #	    SINGLE_DH_USE
 #		      Always create a new key when using temporary/ephemeral
 #		      DH key exchanges
-#	    SSL_OP_NO_TICKET
+#
+#	    NO_TICKET
 #		      Disable use of RFC5077 session tickets. Some servers
 #		      may have problems understanding the TLS extension due
 #		      to ambiguous specification in RFC4507.
+#
 #	    ALL       Enable various bug workarounds suggested as "harmless"
 #		      by OpenSSL. Be warned that this may reduce SSL/TLS
 #		      strength to some attacks.
@@ -2311,8 +2329,11 @@ http_port 127.0.0.1:3128
 #		This is the default action.
 #
 #	    bump
-#		Establish a secure connection with the server and, using a
-#		mimicked server certificate, with the client.
+#		When used on step SslBump1, establishes a secure connection
+#		with the client first, then connect to the server.
+#		When used on step SslBump2 or SslBump3, establishes a secure
+#		connection with the server and, using a mimicked server
+#		certificate, with the client.
 #
 #	    peek
 #		Receive client (step SslBump1) or server (step SslBump2)
@@ -2878,9 +2899,16 @@ http_port 127.0.0.1:3128
 #			    NO_TLSv1    Disallow the use of TLSv1.0
 #			    NO_TLSv1_1  Disallow the use of TLSv1.1
 #			    NO_TLSv1_2  Disallow the use of TLSv1.2
+#
 #			    SINGLE_DH_USE
 #				      Always create a new key when using
 #				      temporary/ephemeral DH key exchanges
+#
+#			    NO_TICKET
+#				      Disable use of RFC5077 session tickets. Some servers
+#				      may have problems understanding the TLS extension due
+#				      to ambiguous specification in RFC4507.
+#
 #			    ALL       Enable various bug workarounds
 #				      suggested as "harmless" by OpenSSL
 #				      Be warned that this reduces SSL/TLS
@@ -3045,9 +3073,6 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 #Default:
 # none
 
-# I2P
-# cache_peer_domain i2p .i2p
-
 #  TAG: cache_peer_access
 #	Restricts usage of cache_peer proxies.
 #
@@ -3176,10 +3201,9 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 #	enough to keep larger objects from hoarding cache_mem.
 #Default:
 # maximum_object_size_in_memory 512 KB
-
 maximum_object_size_in_memory 64 KB
 
-#  TAG: memory_cache_shared	on|off
+#  TAG: memory_cache_shared     on|off
 #	Controls whether the memory cache is shared among SMP workers.
 #
 #	The shared memory cache is meant to occupy cache_mem bytes and replace
@@ -3197,8 +3221,6 @@ maximum_object_size_in_memory 64 KB
 #	To avoid blocking locks, shared memory uses opportunistic algorithms
 #	that do not guarantee that every cachable entity that could have been
 #	shared among SMP workers will actually be shared.
-#
-#	Currently, entities exceeding 32KB in size cannot be shared.
 #Default:
 # "on" where supported if doing memory caching with multiple SMP workers.
 
@@ -3262,7 +3284,6 @@ maximum_object_size_in_memory 64 KB
 #	and http://fog.hpl.external.hp.com/techreports/98/HPL-98-173.html.
 #Default:
 # cache_replacement_policy lru
-
 cache_replacement_policy heap LFUDA
 
 #  TAG: minimum_object_size	(bytes)
@@ -3288,7 +3309,6 @@ cache_replacement_policy heap LFUDA
 #	See cache_replacement_policy for a discussion of this policy.
 #Default:
 # maximum_object_size 4 MB
-
 maximum_object_size 64 MB
 
 #  TAG: cache_dir
@@ -3937,6 +3957,7 @@ maximum_object_size 64 MB
 #	Default:
 #		access_log daemon:/opt/local/var/squid/logs/access.log squid
 #Default:
+# access_log daemon:/opt/local/var/squid/logs/access.log squid
 access_log daemon:/opt/local/var/squid/logs/access.log squid
 
 #  TAG: icap_log
@@ -3956,13 +3977,35 @@ access_log daemon:/opt/local/var/squid/logs/access.log squid
 #	ICAP transaction log lines will correspond to a single access
 #	log line.
 #
-#	ICAP log uses logformat codes that make sense for an ICAP
-#	transaction. Header-related codes are applied to the HTTP header
-#	embedded in an ICAP server response, with the following caveats:
-#	For REQMOD, there is no HTTP response header unless the ICAP
-#	server performed request satisfaction. For RESPMOD, the HTTP
-#	request header is the header sent to the ICAP server. For
-#	OPTIONS, there are no HTTP headers.
+#	ICAP log supports many access.log logformat %codes. In ICAP context,
+#	HTTP message-related %codes are applied to the HTTP message embedded
+#	in an ICAP message. Logformat "%http::>..." codes are used for HTTP
+#	messages embedded in ICAP requests while "%http::<..." codes are used
+#	for HTTP messages embedded in ICAP responses. For example:
+#
+#		http::>h	To-be-adapted HTTP message headers sent by Squid to
+#				the ICAP service. For REQMOD transactions, these are
+#				HTTP request headers. For RESPMOD, these are HTTP
+#				response headers, but Squid currently cannot log them
+#				(i.e., %http::>h will expand to "-" for RESPMOD).
+#
+#		http::<h	Adapted HTTP message headers sent by the ICAP
+#				service to Squid (i.e., HTTP request headers in regular
+#				REQMOD; HTTP response headers in RESPMOD and during
+#				request satisfaction in REQMOD).
+#
+#	ICAP OPTIONS transactions do not embed HTTP messages.
+#
+#	Several logformat codes below deal with ICAP message bodies. An ICAP
+#	message body, if any, typically includes a complete HTTP message
+#	(required HTTP headers plus optional HTTP message body). When
+#	computing HTTP message body size for these logformat codes, Squid
+#	either includes or excludes chunked encoding overheads; see
+#	code-specific documentation for details.
+#
+#	For Secure ICAP services, all size-related information is currently
+#	computed before/after TLS encryption/decryption, as if TLS was not
+#	in use at all.
 #
 #	The following format codes are also available for ICAP logs:
 #
@@ -3976,19 +4019,16 @@ access_log daemon:/opt/local/var/squid/logs/access.log squid
 #		icap::rm	ICAP request method (REQMOD, RESPMOD, or 
 #				OPTIONS). Similar to existing rm.
 #
-#		icap::>st	Bytes sent to the ICAP server (TCP payload
-#				only; i.e., what Squid writes to the socket).
+#		icap::>st	The total size of the ICAP request sent to the ICAP
+#				server (ICAP headers + ICAP body), including chunking
+#				metadata (if any).
 #
-#		icap::<st	Bytes received from the ICAP server (TCP
-#				payload only; i.e., what Squid reads from
-#				the socket).
+#		icap::<st	The total size of the ICAP response received from the
+#				ICAP server (ICAP headers + ICAP body), including
+#				chunking metadata (if any).
 #
-#		icap::<bs	Number of message body bytes received from the
-#				ICAP server. ICAP message body, if any, usually
-#				includes encapsulated HTTP message headers and
-#				possibly encapsulated HTTP message body. The
-#				HTTP body part is dechunked before its size is
-#				computed.
+#		icap::<bs	The size of the ICAP response body received from the
+#				ICAP server, excluding chunking metadata (if any).
 #
 #		icap::tr 	Transaction response time (in
 #				milliseconds).  The timer starts when
@@ -4018,9 +4058,9 @@ access_log daemon:/opt/local/var/squid/logs/access.log squid
 #	The default ICAP log format, which can be used without an explicit
 #	definition, is called icap_squid:
 #
-#logformat icap_squid %ts.%03tu %6icap::tr %>a %icap::to/%03icap::Hs %icap::<size %icap::rm %icap::ru% %un -/%icap::<A -
+#logformat icap_squid %ts.%03tu %6icap::tr %>A %icap::to/%03icap::Hs %icap::<st %icap::rm %icap::ru %un -/%icap::<A -
 #
-#	See also: logformat, log_icap, and %adapt::<last_h 
+#	See also: logformat and %adapt::<last_h
 #Default:
 # none
 
@@ -4693,10 +4733,6 @@ coredump_dir /opt/local/var/squid/cache
 #Default:
 # By default, this directive is unused and has no effect.
 
-# I2P
-# acl i2p dstdomain -n .i2p
-# cache deny i2p
-
 #  TAG: send_hit
 #	Responses denied by this directive will not be served from the cache
 #	(but may still be cached, see store_miss). This directive has no
@@ -4765,7 +4801,9 @@ coredump_dir /opt/local/var/squid/cache
 #	will be considered fresh.
 #
 #	'Max' is an upper limit on how long objects without an explicit
-#	expiry time will be considered fresh.
+#	expiry time will be considered fresh. The value is also used
+#	to form Cache-Control: max-age header for a request sent from
+#	Squid to origin/parent.
 #
 #	options: override-expire
 #		 override-lastmod
@@ -5271,6 +5309,9 @@ request_header_access X_MTI_USERNAME deny all
 request_header_access X_MTI_EMAIL deny all
 request_header_access X_MTI_EMPID deny all
 
+request_header_access User-Agent deny all
+request_header_replace User-Agent Mozilla/5.0 (iPad; CPU OS 12_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/15E148 Safari/604.1
+
 #  TAG: reply_header_access
 #	Usage: reply_header_access header_name allow|deny [!]aclname ...
 #
@@ -5334,9 +5375,7 @@ request_header_access X_MTI_EMPID deny all
 #	By default, headers are removed if denied.
 #Default:
 # none
-
-request_header_access User-Agent deny all
-request_header_replace User-Agent Mozilla/5.0 (iPad; CPU OS 11_2_1 like Mac OS X) AppleWebKit/604.4.7 (KHTML, like Gecko) Version/11.0 Mobile/15C153 Safari/604.1
+#! User-Agent: See above immediately below "request_header_access User-Agent deny all"
 
 #  TAG: reply_header_replace
 #        Usage:   reply_header_replace header_name message
@@ -5419,17 +5458,29 @@ request_header_replace User-Agent Mozilla/5.0 (iPad; CPU OS 11_2_1 like Mac OS X
 # relaxed_header_parser on
 
 #  TAG: collapsed_forwarding	(on|off)
-#       This option controls whether Squid is allowed to merge multiple
-#       potentially cachable requests for the same URI before Squid knows
-#       whether the response is going to be cachable.
+#       When enabled, instead of forwarding each concurrent request for
+#       the same URL, Squid just sends the first of them. The other, so
+#       called "collapsed" requests, wait for the response to the first
+#       request and, if it happens to be cachable, use that response.
+#       Here, "concurrent requests" means "received after the first
+#       request headers were parsed and before the corresponding response
+#       headers were parsed".
 #
-#       This feature is disabled by default: Enabling collapsed forwarding
-#       needlessly delays forwarding requests that look cachable (when they are
-#       collapsed) but then need to be forwarded individually anyway because
-#       they end up being for uncachable content. However, in some cases, such
-#       as accelleration of highly cachable content with periodic or groupped
-#       expiration times, the gains from collapsing [large volumes of
-#       simultenous refresh requests] outweigh losses from such delays.
+#       This feature is disabled by default: enabling collapsed
+#       forwarding needlessly delays forwarding requests that look
+#       cachable (when they are collapsed) but then need to be forwarded
+#       individually anyway because they end up being for uncachable
+#       content. However, in some cases, such as acceleration of highly
+#       cachable content with periodic or grouped expiration times, the
+#       gains from collapsing [large volumes of simultaneous refresh
+#       requests] outweigh losses from such delays.
+#
+#       Squid collapses two kinds of requests: regular client requests
+#       received on one of the listening ports and internal "cache
+#       revalidation" requests which are triggered by those regular
+#       requests hitting a stale cached object. Revalidation collapsing
+#       is currently disabled for Squid instances containing SMP-aware
+#       disk or memory caches and for Vary-controlled cached objects.
 #Default:
 # collapsed_forwarding off
 
@@ -5628,8 +5679,7 @@ shutdown_lifetime 5 seconds
 #	names with this setting.
 #Default:
 # Automatically detect the system host name
-visible_hostname mydomainname.com
-
+visible_hostname localhost
 
 #  TAG: unique_hostname
 #	If you want to have multiple machines with the same
@@ -6861,8 +6911,10 @@ log_icp_queries off
 # Define ACL for protocol FTP
 acl ftp proto FTP
 always_direct allow ftp
-acl mydomainname dstdomain .mydomainname.com
-always_direct allow mydomainname
+
+# Direct to specified domain names
+#acl mydomainname dstdomain .mydomainname.com
+#always_direct allow mydomainname
 
 # Do not forward SSL requests to Privoxy
 #always_direct allow SSL_ports
@@ -7647,7 +7699,6 @@ dns_nameservers 8.8.8.8 4.4.4.4
 
 # Use LAN IP with possible backup if you're running DNS yourself
 #dns_nameservers 10.0.1.3
-
 
 #  TAG: hosts_file
 #	Location of the host-local IP name-address associations
