squid.conf tweaks

--- a/squid.conf
+++ b/squid.conf
@@ -3073,6 +3073,9 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 #Default:
 # none
 
+# I2P
+#cache_peer_domain i2p .i2p
+
 #  TAG: cache_peer_access
 #	Restricts usage of cache_peer proxies.
 #
@@ -3465,6 +3468,7 @@ maximum_object_size 64 MB
 #Default:
 # No disk cache. Store cache ojects only in memory.
 #
+cache_dir ufs /opt/local/var/squid/cache 256 16 256
 
 # Uncomment and adjust the following to add a disk cache directory.
 #cache_dir ufs /opt/local/var/squid/cache 100 16 256
@@ -3878,6 +3882,8 @@ maximum_object_size 64 MB
 #Default:
 # The format definitions squid, common, combined, referrer, useragent are built in.
 
+#logformat squid_ua      %ts.%03tu %6tr %>a %Ss/%03>Hs %<st %rm %ru %[un %Sh/%<a %mt %#{User-Agent}>h
+
 #  TAG: access_log
 #	Configures whether and how Squid logs HTTP and ICP transactions.
 #	If access logging is enabled, a single line is logged for every 
@@ -3959,6 +3965,7 @@ maximum_object_size 64 MB
 #Default:
 # access_log daemon:/opt/local/var/squid/logs/access.log squid
 access_log daemon:/opt/local/var/squid/logs/access.log squid
+#access_log daemon:/opt/local/var/squid/logs/access.log squid_ua
 
 #  TAG: icap_log
 #	ICAP log files record ICAP transaction summaries, one line per
@@ -4156,6 +4163,7 @@ access_log daemon:/opt/local/var/squid/logs/access.log squid
 #	that log can be rotated separately by using debug_options.
 #Default:
 # logfile_rotate 10
+logfile_rotate 31
 
 #  TAG: mime_table
 #	Path to Squid's icon configuration file.
@@ -4732,6 +4740,10 @@ coredump_dir /opt/local/var/squid/cache
 #	* if you do not want a hit on a cached response, use send_hit.
 #Default:
 # By default, this directive is unused and has no effect.
+
+# I2P
+#acl i2p dstdomain -n .i2p
+#cache deny i2p
 
 #  TAG: send_hit
 #	Responses denied by this directive will not be served from the cache
@@ -6906,6 +6918,12 @@ log_icp_queries off
 #	See http://wiki.squid-cache.org/SquidFaq/SquidAcl for details.
 #Default:
 # Prevent any cache_peer being used for this request.
+
+# Do not send AWS requests through Privoxy
+acl aws-domains dstdomain \
+      .aws.amazon.com \
+      .cloudfront.net
+always_direct allow aws-domains
 
 # See http://www.privoxy.org/user-manual/config.html
 # Define ACL for protocol FTP
