Upgrade to squid4

--- a/squid.conf
+++ b/squid.conf
@@ -5721,6 +5721,7 @@ request_header_access From deny all
 # allow privoxy configuration to see the referer, then
 acl privoxy-config dstdomain config.privoxy.org p.p
 request_header_access Referer allow privoxy-config
+cache deny privoxy-config
 # forge Referer in Privoxy
 request_header_access Referer deny all
 request_header_access Server deny all
