--- a/net.openbsd.pf.plist
+++ b/net.openbsd.pf.plist
@@ -5,7 +5,7 @@
         <key>Disabled</key>
         <string>false</string>
 	<key>Label</key>
-	<string>net.openbsd.pf.plist</string>
+	<string>net.openbsd.pf</string>
         <key>WorkingDirectory</key>
         <string>/var/run</string>
 	<key>Program</key>
@@ -18,8 +18,6 @@
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
-	<key>ServiceDescription</key>
-	<string>OpenBSD Packet Filter (pf)</string>
 	<key>StandardErrorPath</key>
 	<string>/var/log/pf.log</string>
 	<key>StandardOutPath</key>
