squid.conf: Minor update to v 4.7

--- a/squid.conf
+++ b/squid.conf
@@ -1,4 +1,4 @@
-#	WELCOME TO SQUID 4.5
+#	WELCOME TO SQUID 4.7
 #	----------------------------
 #	
 #	This is the documentation for the Squid configuration file.
@@ -3354,9 +3354,9 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 # No peer usage restrictions.
 
 # I2P
-#acl i2p dstdomain -n .i2p
-#cache_peer_access i2p allow i2p
-#cache_peer_access i2p deny all
+# acl i2p dstdomain -n .i2p
+# cache_peer_access i2p allow i2p
+# cache_peer_access i2p deny all
 
 #  TAG: neighbor_type_domain
 #	Modify the cache_peer neighbor type when passing requests
@@ -4537,6 +4537,9 @@ access_log daemon:/opt/local/var/squid/logs/access.log squid
 #	and re-opened. This will enable you to rename the logfiles
 #	yourself just before sending the rotate signal.
 #
+#	Note, from Squid-3.1 this option is only a default for cache.log,
+#	that log can be rotated separately by using debug_options.
+#
 #	Note, from Squid-4 this option is only a default for access.log
 #	recorded by stdio: module. Those logs can be rotated separately by
 #	using the rotate=N option on their access_log directive.
@@ -5214,7 +5217,7 @@ coredump_dir /opt/local/var/squid/cache
 # By default, this directive is unused and has no effect.
 
 # I2P
-#cache deny i2p
+# cache deny i2p
 
 #  TAG: send_hit
 #	Responses denied by this directive will not be served from the cache
